syntax = "proto3";

package prysm.beacon.db;

import "eth/v1alpha1/attestation.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/prysmaticlabs/prysm/proto/beacon/db";

message AttestationContainer {
    message SignaturePair {
        bytes aggregation_bits = 1 [(gogoproto.casttype) = "github.com/prysmaticlabs/go-bitfield.Bitlist"];
        bytes signature = 2;
        bool vote_counted = 3;
    }

    ethereum.eth.v1alpha1.AttestationData data = 1;
    repeated SignaturePair signature_pairs = 2;
}
